isd/oes/templates/ingress/oes-ui-ingress.yaml
---
# Source: oes/templates/ingress/oes-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/issuer: letsencrypt-stg-spin
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
  name: oes-ui-ingress
spec:
  rules:
  - host: isd-spin.stg.opsmx.net
    http:
      paths:
      - backend:
          service:
            name: oes-ui
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - isd-spin.stg.opsmx.net
    secretName: oes-ui-ingress
